<resources>
    <string name="app_name">Garapan</string>
    <string name="tittle_inbox">Inbox</string>
    <string name="title_progress">Progress</string>
    <string name="title_garapan">Garapan</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>

    <string name="drawer_open">Open navigation drawer</string>

    <string name="drawer_close">Close navigation drawer</string>

    <string name="garapan_1">Pendidikan</string>

    <string name="garapan_2">Printing</string>
    <string name="garapan_3">Kuliner</string>

    <string name="garapan_4">Otomotif</string>
    <string name="garapan_5">Hiburan</string>
    <string name="garapan_6">Fotografi</string>
    <string name="garapan_7">Palugada</string>
    <string name="garapan_8">Lainnya</string>
    <string name="garapan_9">Event Organizer</string>
    <string name="garapan_10">Wedding Organizer</string>
    <string name="garapan_11">Event Lainnya</string>
    <string name="lorem">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s</string>
    <string name="title_pemilihan">Pemilihan Mitra</string>
    <string name="title_pengerjaan">Pengerjaan</string>


    <string name="title_selesai">Selesai</string>

    <!--Progress Lelang-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="metode_bayar">
        <item>Rekber</item>
        <item>Transfer</item>
        <item>COD</item>
    </string-array>
    <string-array name="progress_garapan">
        <item>Lelang Garapan</item>
        <item>Pemilihan Mitra</item>
        <item>Pengerjaan</item>
        <item>Proses Bayar</item>
        <item>Penyerahan Garapan</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string-array name="input_custom">
        <item>cm</item>
        <item>m</item>
    </string-array>

</resources>
