<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inbox"
        android:icon="@drawable/ic_email_black_24dp"
        android:title="@string/tittle_inbox" />

    <item
        android:id="@+id/navigation_progress"
        android:icon="@drawable/ic_event_black_24dp"
        android:title="@string/title_progress" />

    <item
        android:id="@+id/navigation_garapan"
        android:icon="@drawable/ic_near_me_black_24dp"
        android:title="@string/title_garapan" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_account" />
</menu>
